TestSuite/errors/err0134.pas

const s : array of integer = (2,3,4);
const i : integer = s;
    
begin
end.